modify gitignore for sublime project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .DS_Store
 jannypie.github.io.sublime-project
 jannypie.github.io.sublime-workspace
+githubio.sublime-project
+githubio.sublime-workspace
