--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,6 @@ permalink: /:title
 exclude: ["lib", "blog.rb", "Capfile", "config", "log", "Rakefile", "tmp"]
 sass:
   sass_dir: _sass
+collections:
+  projects:
+    output: true
