new article about dbc being ridiculous

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: http://jannypie.github.io
 auto: false
 server: false
 lsi: false
-pygments: true
+highlighter: rouge
 permalink: /:title
 # paginate: 10
 exclude: ["lib", "blog.rb", "Capfile", "config", "log", "Rakefile", "tmp"]
